# gang

./: .gitmodules  Cargo.toml  README.md  names.txt
client/: Cargo.toml
client/src/: execute.rs  main.rs
client/src/modules/: mine.rs  mod.rs  path.rs
client_v2/: Cargo.toml
client_v2/src/: main.rs  namegen.rs  tasks.rs
client_v2/src/tasks/: head.rs  mod.rs  net.rs  task.rs
client_v2/src/tasks/net/: client.rs  head.rs  mod.rs  server.rs
client_v2/src/tasks/net/server/: mod.rs  per_inst.rs
goals/: Cargo.toml
goals/src/: checker.rs  invert.rs  lib.rs
honeypack/: Cargo.toml  README.md
honeypack/src/: error.rs  lib.rs  packet.rs  trait.rs
pathfind/: Cargo.toml
pathfind/src/: lib.rs
utils/src/: join.rs  lib.rs
