[workspace]
resolver = "2"
members = ["client", "client_v2", "goals", "pathfind", "utils"]
exclude = ["./azalea", "./azalea/*"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
azalea.path = "./azalea/azalea"
utils.path = "./utils"
goals.path = "./goals"
pathfind.path = "./pathfind"
